--- a/compliance.html
+++ b/compliance.html
@@ -55,6 +55,29 @@
       </div>
 
     </section>
+    
+    <div class="panel">
+  <h2>Compliance Tools</h2>
+
+  <div class="grid">
+
+    <a href="bottling.html" class="module-link">
+      <h3>Bottling</h3>
+      <p>Record bottled products and proof gallons.</p>
+    </a>
+
+    <a href="production.html" class="module-link">
+      <h3>Production</h3>
+      <p>Log distillation runs and spirit creation.</p>
+    </a>
+
+    <a href="storage.html" class="module-link">
+      <h3>Storage</h3>
+      <p>Assign spirit to tanks or barrels.</p>
+    </a>
+
+  </div>
+</div>
 
   </main>
 
