--- a/compliance.html
+++ b/compliance.html
@@ -27,9 +27,7 @@
       <!-- CURRENT STATUS -->
       <div class="module">
         <h2>Current Status</h2>
-        <div id="monthStatus">
-          Loading…
-        </div>
+        <div id="monthStatus">Loading…</div>
       </div>
 
       <!-- THIS MONTH BOTTLED -->
@@ -49,35 +47,15 @@
       <!-- QUICK ACTIONS -->
       <div class="module">
         <h2>Quick Actions</h2>
-        <ul>
-          <li><a href="bottling.html">Add Bottling Entry</a></li>
-        </ul>
+
+        <div class="actions">
+          <a href="bottling.html" class="action-btn">Add Bottling Entry</a>
+          <a href="production.html" class="action-btn">Add Production Run</a>
+          <a href="storage.html" class="action-btn">Add Storage Event</a>
+        </div>
       </div>
 
     </section>
-    
-    <div class="panel">
-  <h2>Compliance Tools</h2>
-
-  <div class="grid">
-
-    <a href="bottling.html" class="module-link">
-      <h3>Bottling</h3>
-      <p>Record bottled products and proof gallons.</p>
-    </a>
-
-    <a href="production.html" class="module-link">
-      <h3>Production</h3>
-      <p>Log distillation runs and spirit creation.</p>
-    </a>
-
-    <a href="storage.html" class="module-link">
-      <h3>Storage</h3>
-      <p>Assign spirit to tanks or barrels.</p>
-    </a>
-
-  </div>
-</div>
 
   </main>
 
@@ -93,4 +71,3 @@
   <script type="module" src="compliance.js"></script>
 </body>
 </html>
-
