--- a/storage.html
+++ b/storage.html
@@ -6,8 +6,8 @@
   <title>797 Distillery — Storage Events</title>
 
   <!-- Shared header + styles -->
-  <link rel="stylesheet" href="header.css?v=1.0.0" />
-  <link rel="stylesheet" href="mash.css?v=1.0.1" />
+  <link rel="stylesheet" href="header.css" />
+  <link rel="stylesheet" href="mash.css" />
 </head>
 
 <body>
