--- a/compliance.html
+++ b/compliance.html
@@ -52,6 +52,11 @@
           <a href="bottling.html" class="action-btn">Add Bottling Entry</a>
           <a href="production.html" class="action-btn">Add Production Run</a>
           <a href="storage.html" class="action-btn">Add Storage Event</a>
+
+          <!-- NEW: REPORTS -->
+          <a href="reports.html" class="action-btn primary">
+            File Monthly TTB Reports
+          </a>
         </div>
       </div>
 
