--- a/reports.html
+++ b/reports.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>797 Distillery — Monthly TTB Reports</title>
 
-  <!-- Shared header + site styles -->
+  <!-- Global header -->
   <link rel="stylesheet" href="header.css" />
   <link rel="stylesheet" href="reports.css" />
 </head>
@@ -19,8 +19,10 @@
 
     <header class="reports-header">
       <h1>Monthly TTB Reports</h1>
-      <div id="reportMonthBanner" class="month-banner">
-        Filing Month: <span id="filingMonthLabel">—</span>
+
+      <!-- LOCKED MONTH BANNER -->
+      <div id="reportMonthBanner" class="month-banner warning">
+        Filing Month: <span id="filingMonthLabel">Not loaded</span>
       </div>
     </header>
 
