--- a/reports.html
+++ b/reports.html
@@ -83,9 +83,28 @@
       </table>
     </section>
 
-    <!-- =======================================================
-         FUTURE: TTB 5110.11 — STORAGE
+        <!-- =======================================================
+         TTB 5110.11 — STORAGE
          ======================================================= -->
+    <section class="report-card">
+      <h2>TTB 5110.11 — Storage</h2>
+
+      <table class="report-table">
+        <thead>
+          <tr>
+            <th>Line</th>
+            <th>Description</th>
+            <th>Pay.gov Label</th>
+            <th>Instruction</th>
+            <th>Value (PG)</th>
+            <th></th>
+          </tr>
+        </thead>
+
+        <!-- Populated by reports.js -->
+        <tbody id="storageTable"></tbody>
+      </table>
+    </section>
 
   </main>
 
